Set Java 8 as the minimum for the next version