@@ -24,8 +24,8 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:2.23.4'
 }
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 version = '1.3-SNAPSHOT'
 group = 'com.github.rodm'
@@ -53,7 +53,6 @@ task functionalTest(type: Test) {
     group = 'verification'
     testClassesDirs = sourceSets.functionalTest.output.classesDirs
     classpath = sourceSets.functionalTest.runtimeClasspath
-    jvmArgs "-XX:MaxPermSize=512m"
 }
 
 task samplesTest(type: Test) {
